--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--===== HOME =====-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Abhi</span><br>Developer</h1>
+                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Abhi</span><br>Freelancer</h1>
 
                 <a href="https://wa.me/+916282160906" class="button">Contact</a>
             </div>
